<resources>
    <string name="app_name">租来赚</string>
    <string name="companBrief1">  租来赚由电子商务有限公司运营,租来赚集合全球金融发展和和互联网技术创新,在健全的风险管控体系基础上,为个人客户提供专业、可信赖的平台服务。租来赚是中国互联网金融的一个新星。</string>
    <string name="companBrief2">  作为中国新生的网络投资信息中介服务平台之一。租来赚平台（zulaizhuan.com）致力为高成长人群提供专业的线上投资及来租撮合服务。租来赚平台在以后继续坚持专业、严谨、自律、合规的发展理念，凭借自身的技术、分控实力以及专业的管理团队，致力于走在行业前列，始终坚持小额来租。经过接下来的稳健发展，租来赚要发展成区域领军者，并获得iTRUST互联网信用平价中心AAA级信用认证。</string>
    <string name="mediaDetails">Html新闻文档图文</string>
    <string name="riskWarning">租来赚仅为信息发布平台,未以任何明示或暗示的方式对投资提供担保或承诺本利息,投资人应根据自身的投资偏好很风险承受能力进行独立判断和作出决策,并自行承担资金投资的风险与责任,包括不限于可能的本息损失。谨慎投资</string>
    <string name="questionNo1">1.什么是债权退租？</string>
    <string name="replyTo1">租来赚投资人通过平台转让其已投资但尚未到期的符合退租条件的投资项目，到期内可得所有本金利息，未到期退租则扣除50%利息</string>
    <string name="questionNo2">2.什么样的债权可以退租？</string>
    <string name="replyTo2">1.持有30日以上未逾期项目，距离应继续投资3天及以上的项目进行债权退租；2.退租期间，如原有债权提前撤资，则系统自动撤销转让。</string>
    <string name="questionNo3">3.退租金额计算公式？</string>
    <string name="replyTo3">退租金额=剩余本金*（100%-折扣百分比）+当期应收利息例\n
投资金额：10，000元 已回款期数：3期\n
投资期限：6期（每期为1个月）\n
历史年回报收益率：15%  来租日期：2018.06.09\n
来租方式：按月付息  退租日期：2018.10.09\n
用户A投资10000元，转让人当期持有12天，退租人当期应收利息为50元，折扣比例为5%。\n
则退租价格为：10000*（100%-5%）+50=9,550元\n</string>
    <string name="questionNo4">4.退租的债权有效期多久？</string>
    <string name="replyTo4">每次退租的有效期为72小时。超过退租有效期后仍然没有成功来租的债权，视为来租失败，系统自动撤销该部分债权退租申请。</string>
    <string name="riskMessage"> 您正在进行的是由租来赚商务顾问（武汉）有限公司（下称“租来赚”
）提供网络投资信息中介服务的网络投资活动。租来赚在此就网络投资活
动的风险及禁止性行为向您提示如下：\n
1、网络投资是个体和个体之间通过互联网平台实现的直接投资，您与
投资人约定的且通过租来赚平台展示的投资利率或期待年回报率不代表您
最终实际取得的利息或回报，您出借的本金以及相应的利息存在不能够按
期收回的风险；租来赚不对您本金的收回、可获利息或回报金额作出任何
承诺、保证。\n
2、您作为投资人，不得从事以下行为或存在以下情形：\n
（1）向网络投资信息中介机构提供不真实、不准确、不完整的信息；
（2）使用非法资金或非自有资金进行投资；\n
（3）不具备与进行网络投资活动相适应的风险认知和承受能力，投资
于与自身风险承受能力不匹配的融资项目；\n
（4）其他投资合同及有关协议约定的禁止性行为。\n
3、您确认已经知悉网络投资活动的风险，保证不存在从事网络投资
活动的禁止性行为，承诺具备与参与网络投资活动相适应的投资风险意识
、风险识别能力、拥有非保本类金融产品投资的经历并熟悉互联网，承诺
自行承担投资产生的本息损失。</string>
    <string name="tenantPact">尊敬的客户：\n
 您正在进行的是由租来赚商务顾问（武汉）有限公司（下称“租来赚”）提供网络投资信息中介服务的网络投资活动。租来赚在此就网络投资活
动的风险及禁止性行为向您提示如下：\n
租来赚-合同协议书.\n
协议编号：________________________\n
甲方：________________________\n
身份证件号码：________________________\n
联系电话：________________________\n
乙方：租来赚商务顾问有限公司\n
地址：__省XX市XX区XX路XX大厦A座18层。\n
邮编：1000866\n
咨询电话：400-090-6666 \n
甲乙双方经友好协商，本着平等自愿、诚实信用的原则，达成以下协议：\n
1、租来赚服务意向\n
1.1 乙方作为一家在武汉市合法成立并有效存续的有限责任公司，合称“租
来赚WE理财|投资理财平台”，以下简称“租来赚投资理财平台”）的经营权
乙方谨此推出"投资人优先自动投标及到期按相关规则自动退出"的U计划
服务（下称“U计划”），为加入U计划的投资人提供更加贴心、便捷的服务
，并将尽最大努力维护来租人的合法利益。\n
1.2 甲方同意加入本期U计划，并自愿遵守租来赚网络理财平台现有的相关协议及规则。\n
        2、甲方加入本期U计划详情：\n
甲方同意按照如下条件通过租来赚投资理财平台加入乙方提供的本期U计划，相关条件详情如下：\n
名称________________________\n
预期年化利率________________________\n
加入资金数额（下称“甲方加入资金”）\n
锁定期________________________\n
优先自动投标范围________________________\n
收益处理方式________________________\n
锁定期开始日________________________\n
锁定期结束日________________________\n
甲方已经知悉、了解并同意：本协议所示预期年化利率不代表甲方最终实
际收益；本协议约定范围内的投资标的均适用于租来赚用户利益保障机制，
甲方用以本金以及相应的利息存在不能够按期收回的风险；在实际年化利
率未达到预期年化利率的情况下，甲方仅能收取其实际收益（“收益”，包
括投资利息，也包括变现对应债权时回收的款项中的收益部分，以及罚息
等其他收益）。乙方不对甲方本金的收回、可获利息金额作出任何承诺、
保证。\n
甲方在申请期内支付完毕甲方加入资金的，即加入本期U计划，且无论甲
方加入本期U计划时锁定期是否开始，一旦加入，甲方均不得撤销、取消
本协议和/撤销、取消加入本期U计划，并只能根据本协议第6条约定退出
本期U计划。甲方加入本期U计划后，甲方即可通过系统在本协议项下甲
方认可的范围内进行优先自动投标。\n</string>

    <string name="serveIntroduce">优点一：总价低、首付低、月供低\n
无论是自住还是投资，小户型相对于大户型来说，其最大的优点就是总价低。如果是通过银行按揭方式购买，那么其首付和月供也相对较低。首付在10万元左右，月供一般不会超过2000元，银行还贷压力相对较小\n
优点二：过渡性强\n
对大多数自住购房者尤其是单身贵族或刚结婚不久的小夫妻而言，想要一次性购置3室甚至4室这种大户型，其难度是比较大的。很多人会倾向于选择小户型，等到财富积攒到一定程度再考虑二次置业，改善居住环境。
因此，小户型可以作为一个过渡性产品，在若干年后，有了更大、更舒适的房子，小户型可以出租或出售，“滚动置业”的美好设想可以在小户型这个载体上比较轻松地实现。可租可售可自住，所以说它的过渡性是非常强的。\n
优点三：投资风险小\n
一方面，由于小户型总价低，其投资门槛相对不高。通过选择地段和装修标准，一般可以实现用月租偿还月供赚取长期稳定的收益，或者伺机出售，迅速回笼资金。比起大户型来说，由于总价低，机会成本也相对少。
即使房价出现比较大的动荡，亏损也相对较少。另一方面，投资小户型房屋，相对于投资股票、债券来说，收益更稳定。即使房价出现大的动荡，也不会像股市崩盘一样，投资变成一堆废纸。从这个角度来说，风险是比较小的。</string>
    \n
    <string name="productQuery">1.是否可以提前终止持有租权以收回来租的资金？\n
可以，投资成功后完成投资90天后您可以通过未到期退租的方式提前收回来租的资金。\n
2.对散标进行投资安全？\n
租来赚以严谨负责的态度对每笔投资进行严格筛选，同时具备专业的投资后管理团队和高效的来租流程，最大限度的保护投资者的权益。\n
3.来租人提前撤租怎么办？\n
自提前撤租开始之后，正常利息停止预算。按照下面公式计算罚息：\n
罚息总额=本息*对应罚息利率*天数\n
提前撤租天数1-30天：罚息利率0.05%\n
提前撤租天数31天以上：罚息利率0.1%\n
注：本息计算公式按50元一份计算。\n
4.投资人提前结算怎么办？\n
投资人可以提前撤租，如果来租人提前撤租，需要额外支付给平台剩余本金（扣除提前撤租当期的应用本金）的1%作为提前撤租补偿金（违约金），不用再支付后续的利息及管理费用。\n
注:部分投标的提前补偿金（违约金）费率为0.\n
具体公式如下：\n
提前撤租金额=剩余本金+当期本息及账户管理费+提前撤租补偿金（违约金）\n</string>

    <string name="reconmand">推荐专区</string>
    <string name="coupon">领取超值优惠券</string>
    <string name="yield">回报收益率</string>
    <string name="enter">立即加入</string>
    <string name="sort">综合排序</string>
    <string name="amount">投资金额</string>
    <string name="rate">按利率</string>
    <string name="least">按租期</string>
    <string name="hasinvest">已投资</string>
    <string name="term">期限</string>
    <string name="leasing">在租中</string>
    <string name="leased">到期退租</string>
    <string name="haslease">已退租</string>
    <string name="myqb">我的券包</string>
    <string name="account_sum">账户统计</string>
    <string name="ddcx">订单查询</string>
    <string name="myzq">我的租权</string>
    <string name="hyyq">好友邀请</string>
    <string name="zxkf">在线客服</string>
    <string name="sysjhm">请输入手机号码</string>
    <string name="srmm">请输入登录密码</string>
    <string name="login">登     录</string>
    <string name="yzmdl">验证码登录</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="next">下一步</string>


    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="changepwd">重置密码</string>
    <string name="newpwd">新登录密码</string>
    <string name="pwdagin">确认新登录密码</string>
    <string name="queren">确   认</string>
    <string name="tzz">投资中</string>
    <string name="ytz">已退租</string>
    <string name="yjq">已结清</string>
    <string name="funds_detail">资金明细</string>
    <string name="out_login">退出登陆</string>
    <string name="pay_password">支付密码</string>
    <string name="appname">租来赚</string>

    |<!--在线客服常见问题-->
    |<string name="kf_xs_wen1">1.什么是新手专享？</string>
    |<string name="kf_xs_wen2">2.新手专享的特点？</string>
    |<string name="kf_xs_wen3">3.新手专享收取费用？</string>
    <string name="kf_xs_da1">新手专享租来赚平台为用户特别推出的高息高回报的产品,任何注册新老用户都可以享用该来租产品获得高额回报。</string>
    <string name="kf_xs_da2">新手专享的产品无论从投资期还是投资利息回报都是其他产品所无法比拟的,能让你在最短时间内,以最低的投资,获得高额高息的回报</string>
    <string name="kf_xs_da3">平台任何投资产品均不涉及额外收费</string>
    <string name="kf_tz_wen1">1.租来赚如何退租？</string>
    <string name="kf_tz_wen2">2.退租金额如何计算？</string>
    <string name="kf_tz_wen3">3.租来赚能不能提前退租？</string>
    <string name="kf_tz_da1">租来赚平台来租容易退租简单,用户投资某产品,中间可以无条件退出,从租期到退租不满一月,不扣除任何投资本金.当然不满投资一月,也是没有任何利息回报的</string>
    <string name="kf_tz_da2">退租金额从你投资到退租天起,不满一个月.只退换本金,投资满一个月,按照产品租期和已租期计算利息比例来返还投资本金+所获利息
计算公式( 已租期 / 产品租期 * 基本利率 ) * 本金 +本金</string>
    <string name="kf_tz_da3">可以提前退租,不受任何限制</string>
    <string name="kf_yqhy_wen1">1.如何邀请好友？</string>
    <string name="kf_yqhy_wen2">2.邀请好友有什么奖励？</string>
    <string name="kf_yqhy_wen3">3.积分的作用？</string>
    <string name="kf_yqhy_da1">可以点击app分享按钮,会展示你的邀请码,你可以把分享二维码分享到微信,朋友圈,qq空间里</string>
    <string name="kf_yqhy_da2">邀请成功的好友,平台给予邀请人和被邀请人赠送额外的积分奖励</string>
    <string name="kf_yqhy_da3">用户做任务和邀请好友都可获得积分,积分可以在app里面兑换任何不同数值的加息劵,代金劵,可用于投资时,减免一部分费用和增加投资回报的利率</string>



</resources>
